--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -26,8 +26,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GOSEC_VERSION: '2.14.0'
-  HELM_VERSION: v3.10.1
+  GOSEC_VERSION: '2.15.0'
+  HELM_VERSION: v3.10.3
 
 jobs:
   build-kube-ovn:
@@ -60,7 +60,12 @@ jobs:
 
       - name: Install gosec
         run: |
-          curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin 'v${{ env.GOSEC_VERSION }}'
+          tmp=$(mktemp -d)
+          archive="gosec_${{ env.GOSEC_VERSION }}_$(go env GOHOSTOS)_$(go env GOHOSTARCH).tar.gz"
+          wget -q -O "$tmp/$archive" https://github.com/securego/gosec/releases/download/v${{ env.GOSEC_VERSION }}/$archive
+          tar --no-same-owner -C "$tmp" -xzf "$tmp/$archive"
+          install "$tmp/gosec" /usr/local/bin
+          rm -rf $tmp
 
       - name: Build
         run: |
@@ -118,9 +123,57 @@ jobs:
       #     name: centos8-compile
       #     path: centos8-compile.tar
 
+  build-e2e-binaries:
+    name: Build E2E Binaries
+    runs-on: ubuntu-22.04
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        run: mkdir -p test/e2e/source
+
+      - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.repository.default_branch }}
+          fetch-depth: 1
+          path: test/e2e/source
+
+      - name: Export E2E directory
+        run: |
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
+          else
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
+          fi
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
+          check-latest: true
+
+      - name: Export Go full version
+        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+
+      - name: Go cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
+          restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
+
+      - run: make e2e-compile
+
   k8s-conformance-e2e:
     name: Kubernetes Conformance E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
@@ -137,9 +190,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -168,17 +223,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -215,7 +266,9 @@ jobs:
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
     if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
@@ -229,9 +282,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -260,17 +315,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -303,7 +354,9 @@ jobs:
   k8s-netpol-legacy-e2e:
     name: Kubernetes Network Policy Legacy E2E
     if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
@@ -317,9 +370,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -348,17 +403,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -405,9 +456,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -452,7 +505,9 @@ jobs:
 
   kube-ovn-conformance-e2e:
     name: Kube-OVN Conformance E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
@@ -466,9 +521,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -492,17 +549,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -540,16 +593,20 @@ jobs:
 
   kube-ovn-ic-conformance-e2e:
     name: Kube-OVN IC Conformance E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -573,17 +630,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -766,15 +819,18 @@ jobs:
     needs:
       - build-kube-ovn
       - build-vpc-nat-gateway
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -798,17 +854,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -885,7 +937,9 @@ jobs:
 
   cilium-chaining-e2e:
     name: Cilium Chaining E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
@@ -895,9 +949,11 @@ jobs:
           version: '${{ env.HELM_VERSION }}'
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -926,17 +982,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -971,7 +1023,9 @@ jobs:
 
   kube-ovn-security-e2e:
     name: Kube-OVN Security E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
@@ -991,9 +1045,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -1017,17 +1073,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
