--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -190,11 +190,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -227,6 +227,7 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - run: make e2e-compile
+        working-directory: ${{ env.E2E_DIR }}
 
   k8s-conformance-e2e:
     name: Kubernetes Conformance E2E
@@ -249,11 +250,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -341,11 +342,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -429,11 +430,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -515,11 +516,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -580,11 +581,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -661,11 +662,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -885,11 +886,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -1008,11 +1009,11 @@ jobs:
           version: '${{ env.HELM_VERSION }}'
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -1104,11 +1105,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
-        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
